data/derived/comb/progs/unify/prog5808.ml.out
Characters 227-228:
  let (carry, res) = List.fold_left f base args in
                                    ^
Error: This expression has type 'a * int list -> 'b * int list -> int list
       but an expression was expected of type
         'a * int list -> 'b * int list -> 'a * int list
       Type int list is not compatible with type 'a * int list 
